--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
   </head>
   <body>
     <script src="javascript/index.js"></script>
+    <footer>
+      Coded with ❤️ by Alena Causov (<a
+        href="https://github.com/alenac27/world-clock"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Open-source code on Github </a
+      >)
+    </footer>
   </body>
 </html>
