added the basic HTML

--- a/index.html
+++ b/index.html
@@ -6,17 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <title>World Clock</title>
-    <h1>World Clock</h1>
   </head>
   <body>
-    <script src="javascript/index.js"></script>
-    <footer>
-      Coded with ❤️ by Alena Causov (<a
-        href="https://github.com/alenac27/world-clock"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Open-source code on Github </a
-      >)
-    </footer>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="" id="cities">
+        <option value="">Select a city...</option>
+        <option value="">New York</option>
+        <option value="">Berlin</option>
+        <option value="">Moscow</option>
+      </select>
+
+      <div class="city">
+        <h2>Paris 🇫🇷</h2>
+        <div class="date">March 5th 2023</div>
+        <div class="time">11:55:55 AM</div>
+      </div>
+
+      <div class="city">
+        <h2>Kostanay 🇰🇿</h2>
+        <div class="date">March 5th 2023</div>
+        <div class="time">11:55:55 AM</div>
+      </div>
+      <script src="javascript/index.js"></script>
+      <footer>
+        Coded with ❤️ by Alena Causov (<a
+          href="https://github.com/alenac27/world-clock"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Open-source code on Github </a
+        >)
+      </footer>
+    </div>
   </body>
 </html>
