--- a/index.html
+++ b/index.html
@@ -5,36 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <title>World Clock</title>
   </head>
   <body>
     <div class="container">
       <h1>World Clock</h1>
       <select name="" id="cities">
-        <option value="">Select a city...</option>
+        <option value="">Select a city</option>
         <option value="">New York</option>
         <option value="">Berlin</option>
         <option value="">Moscow</option>
       </select>
-
       <div class="city">
-        <h2>Paris 🇫🇷</h2>
-        <div class="date">March 5th 2023</div>
-        <div class="time">11:55:55 AM</div>
+        <div>
+          <h2>Kostanay 🇰🇿</h2>
+          <div class="date">March 5th 2023</div>
+        </div>
+        <div class="time">11:55:55 <small>AM</small></div>
       </div>
 
       <div class="city">
-        <h2>Kostanay 🇰🇿</h2>
-        <div class="date">March 5th 2023</div>
-        <div class="time">11:55:55 AM</div>
+        <div>
+          <h2>Bordeaux 🇫🇷</h2>
+          <div class="date">March 5th 2023</div>
+        </div>
+        <div class="time">11:55:55 <small>AM</small></div>
       </div>
+
       <script src="javascript/index.js"></script>
       <footer>
-        Coded with ❤️ by Alena Causov (<a
+        Coded with ❤️ by <strong>Alena Causov </strong>(<a
           href="https://github.com/alenac27/world-clock"
           target="_blank"
           rel="noopener noreferrer"
-          >Open-source code on Github </a
+          >Open-source code on Github</a
         >)
       </footer>
     </div>
