--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.41/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
   </head>
   <body>
@@ -22,20 +24,20 @@
         <option value="">Berlin</option>
         <option value="">Moscow</option>
       </select>
-      <div class="city">
+      <div class="city" id="almaty">
         <div>
-          <h2>Kostanay 🇰🇿</h2>
-          <div class="date">March 5th 2023</div>
+          <h2>Almaty 🇰🇿</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">11:55:55 <small>AM</small></div>
+        <div class="time"></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="berlin">
         <div>
-          <h2>Bordeaux 🇫🇷</h2>
-          <div class="date">March 5th 2023</div>
+          <h2>Berlin 🇩🇪</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">11:55:55 <small>AM</small></div>
+        <div class="time"></div>
       </div>
 
       <script src="javascript/index.js"></script>
