display time of selected cities

--- a/index.html
+++ b/index.html
@@ -20,24 +20,26 @@
       <h1>World Clock</h1>
       <select name="" id="cities">
         <option value="">Select a city</option>
-        <option value="">New York</option>
-        <option value="">Berlin</option>
-        <option value="">Moscow</option>
+        <option value="America/New_York">New York</option>
+        <option value="Europe/Paris">Paris</option>
+        <option value="Europe/Moscow">Moscow</option>
       </select>
-      <div class="city" id="almaty">
-        <div>
-          <h2>Almaty 🇰🇿</h2>
-          <div class="date"></div>
+      <div id="city-list">
+        <div class="city" id="almaty">
+          <div>
+            <h2>Almaty 🇰🇿</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
 
-      <div class="city" id="berlin">
-        <div>
-          <h2>Berlin 🇩🇪</h2>
-          <div class="date"></div>
+        <div class="city" id="berlin">
+          <div>
+            <h2>Berlin 🇩🇪</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
 
       <script src="javascript/index.js"></script>
