--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <h1>World Clock</h1>
       <select name="" id="cities">
         <option value="">Select a city</option>
+        <option value="current">My current location</option>
         <option value="America/New_York">New York</option>
         <option value="Europe/Paris">Paris</option>
         <option value="Europe/Moscow">Moscow</option>
