added third city

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
           </div>
           <div class="time"></div>
         </div>
+
+        <div class="city" id="montevideo">
+          <div>
+            <h2>Montevideo 🇺🇾</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
       </div>
 
       <script src="javascript/index.js"></script>
